Details
-
Bug
-
Status: Closed
-
Critical
-
Resolution: Fixed
-
None
-
Linux
Description
I extended the C++ unit tests to send a second request using the same generated client instance (without recreating it). This causes the following two problems:
1.) the client still has the first request in it's output buffer causing it to send the first request again and again
2.) the wrong cob gets called, as sending the second request will always overwrite the cob of the first request