THRIFT-3496 C++: Cob style client fails when sending a consecutive request

This closes #752